<?xml version="1.0"?>
<package format="2">
    <name>panda_safety</name>
    <version>0.0.1</version>
    <description>panda_simulation - safety</description>

    <maintainer email="info@erdalpekel.de">Erdal Pekel</maintainer>
    <author email="info@erdalpekel.de">Erdal Pekel</author>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>tf</depend>
    <depend>moveit_core</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>moveit_ros_perception</depend>
    <depend>moveit_visual_tools</depend>
    <depend>interactive_markers</depend>
    <depend>image_geometry</depend>
    <depend>moveit_ros_control_interface</depend>
    <depend>panda_msgs</depend>

    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>joint_trajectory_controller</exec_depend>
    <exec_depend>position_controllers</exec_depend>
    <exec_depend>velocity_controllers</exec_depend>
    <exec_depend>effort_controllers</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>controller_manager</exec_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>controller_manager</build_depend>
    <build_depend>panda_utils</build_depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>actionlib</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>panda_utils</exec_depend>

</package>